--- a/app/src/main/res/layout/buy_page_layout.xml
+++ b/app/src/main/res/layout/buy_page_layout.xml
@@ -9,5 +9,5 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="213dp"
-        android:id="@+id/button" />
+        android:id="@+id/nav_buy" />
 </RelativeLayout>
