--- a/app/src/main/res/layout/activity_finish_create_fundraiser.xml
+++ b/app/src/main/res/layout/activity_finish_create_fundraiser.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.hhsfbla.launch.CreateFundraiserActivity">
+    tools:context="com.hhsfbla.launch.FinishCreateFundraiserActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -13,26 +13,15 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/create_toolbar"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="Launch Fundraiser">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Next"
-                android:layout_gravity="right"
-                android:textColor="@android:color/white"
-                android:background="@android:color/transparent"
-                android:id="@+id/create_next_button" />
-
-        </android.support.v7.widget.Toolbar>
+            app:title="Launch Fundraiser" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_create_fundraiser" />
+    <include layout="@layout/content_finish_create_fundraiser" />
 
 </android.support.design.widget.CoordinatorLayout>
