--- a/app/src/main/res/layout/content_create_fundraiser.xml
+++ b/app/src/main/res/layout/content_create_fundraiser.xml
@@ -29,7 +29,7 @@
         android:layout_below="@+id/textView"
         android:layout_alignParentStart="true"
         android:layout_marginTop="14dp"
-        android:id="@+id/editText"
+        android:id="@+id/organizationNameField"
         android:layout_alignParentEnd="true"
         android:hint="Homestead FBLA"
         android:background="@drawable/edittext_style"
@@ -39,7 +39,7 @@
         android:text="We're raising funds for"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/organizationNameField"
         android:layout_alignParentStart="true"
         android:layout_marginTop="22dp"
         android:id="@+id/textView3" />
@@ -52,7 +52,7 @@
         android:layout_below="@+id/textView3"
         android:layout_alignParentStart="true"
         android:layout_marginTop="14dp"
-        android:id="@+id/editText2"
+        android:id="@+id/fundraiserPurposeField"
         android:hint="National Leadership Conference"
         android:layout_alignParentEnd="true"
         android:padding="16dp"
@@ -62,7 +62,7 @@
         android:text="Our goal is to raise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/fundraiserPurposeField"
         android:layout_alignParentStart="true"
         android:layout_marginTop="20dp"
         android:id="@+id/textView4" />
@@ -75,7 +75,7 @@
         android:layout_below="@+id/textView4"
         android:layout_alignParentStart="true"
         android:layout_marginTop="14dp"
-        android:id="@+id/editText3"
+        android:id="@+id/goalField"
         android:background="@drawable/edittext_style"
         android:padding="16dp"
         android:hint="$500" />
@@ -84,7 +84,7 @@
         android:text="By this date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText3"
+        android:layout_below="@+id/goalField"
         android:layout_alignParentStart="true"
         android:layout_marginTop="21dp"
         android:id="@+id/textView5" />
@@ -95,7 +95,7 @@
         android:inputType="date"
         android:ems="10"
         android:layout_below="@+id/textView5"
-        android:layout_alignEnd="@+id/editText3"
+        android:layout_alignEnd="@+id/goalField"
         android:layout_marginTop="12dp"
         android:id="@+id/fundraiser_dateField"
         android:background="@drawable/edittext_style"
