--- a/app/src/main/res/layout/activity_your_fundraisers.xml
+++ b/app/src/main/res/layout/activity_your_fundraisers.xml
@@ -4,17 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hhsfbla.launch.YourFundraisersActivity">
+    tools:context="com.hhsfbla.launch.YourFundraisersActivity"
+    android:id="@+id/fundraisers_layout">
 
-    <Button
-        android:text="Fundraiser 1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/button1" />
 
-    <Button
-        android:text="Fundraiser 2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/button2" />
 </LinearLayout>
