--- a/app/src/main/res/layout/activity_launch_home.xml
+++ b/app/src/main/res/layout/activity_launch_home.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,7 +11,7 @@
     <com.synnapps.carouselview.CarouselView
         android:id="@+id/carouselView"
         android:layout_width="match_parent"
-        android:layout_height="189dp"
+        android:layout_height="180dp"
         app:fillColor="#FFFFFFFF"
         app:pageColor="#00000000"
         app:radius="6dp"
@@ -18,110 +19,199 @@
         app:strokeColor="#FF777777"
         app:strokeWidth="1dp" />
 
-    <TextView
-        android:text="Campaign Title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/campaign_title_textview"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textSize="30sp"
-        android:layout_marginLeft="3dp"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
+            <TextView
+                android:text="Campaign Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/campaign_title_textview"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textSize="30sp"
+                android:layout_marginTop="16dp" />
 
-    <TextView
-        android:text="Nonprofit Organization Name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/nonprofit_org_name_textview"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:layout_marginLeft="3dp"/>
+            <TextView
+                android:text="Nonprofit Organization Name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/nonprofit_org_name_textview"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_marginTop="7dp" />
 
-    <TextView
-        android:text="@string/home_page_description_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/homepage_campaign_descrption"
-        android:layout_marginLeft="3dp"
-        />
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:autoLink="web"-->
-        <!--android:"@+id/campaign p"/>-->
-    <TextView
-        android:text="Campaign Progress:"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:layout_marginLeft="3dp"
-        android:layout_marginTop="10dp"
-        android:textSize="18sp"/>
-    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
-        app:rcProgress="29.0"
-        app:rcMax="100.0"
-        app:rcRadius="13dp"
-        app:rcBackgroundPadding="1dp"
-        app:rcReverse="false"
-        app:rcProgressColor="#3498db"
-        app:rcBackgroundColor="#bdc3c7" />
+            <TextView
+                android:text="@string/home_page_description_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/homepage_campaign_descrption"
+                android:layout_marginTop="7dp" />
+            <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:autoLink="web"-->
+                <!--android:"@+id/campaign p"/>-->
 
-    <TextView
-        android:text="$2,900 of $10,000"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/progress_text"
-        android:textAlignment="center"
-        android:textSize="14sp"/>
+            <TextView
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView13"
+                android:textAllCaps="true"
+                tools:text="Learn More"
+                android:textColor="@color/colorAccent" />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        >
+            <TextView
+                android:text="$2,900 raised of $10,000 goal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/progress_text"
+                android:textSize="14sp"
+                android:layout_marginTop="16dp" />
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_shopping_cart"
-            android:id="@+id/imageButton4"
-            android:scaleType="fitCenter"
-            android:background="?attr/selectableItemBackground"
-            android:layout_weight="1" />
+            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
+                android:layout_width="354dp"
+                app:rcProgress="29.0"
+                app:rcMax="100.0"
+                app:rcRadius="13dp"
+                app:rcBackgroundPadding="1dp"
+                app:rcReverse="false"
+                app:rcProgressColor="#3498db"
+                app:rcBackgroundColor="#eeeeee"
+                android:layout_height="16dp"
+                android:layout_marginTop="2dp" />
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_donation"
-            android:id="@+id/imageButton5"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            android:background="?attr/selectableItemBackground"/>
+            <TextView
+                android:text="20 days left"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView12"
+                android:textAllCaps="true"
+                android:textStyle="normal|bold" />
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_fair_stand"
-            android:id="@+id/imageButton6"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            android:background="?attr/selectableItemBackground"/>
+
+        <!--<com.hhsfbla.launch.TextViewExpandableAnimation-->
+            <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+            <!--android:id="@+id/tv_expand"-->
+            <!--android:layout_width="367dp"-->
+            <!--android:layout_height="122dp"-->
+            <!--app:tvea_expandLines="3"-->
+            <!--app:tvea_textContentColor="@color/color_gray_light_content_text"-->
+            <!--app:tvea_textContentSize="@dimen/sp_txt_size_content"-->
+            <!--app:tvea_textExpand="@string/expand"-->
+            <!--app:tvea_textShrink="@string/shrink"-->
+            <!--app:tvea_textStateColor="#2ecc71" />-->
     </LinearLayout>
 
 
-    <!--<com.hhsfbla.launch.TextViewExpandableAnimation-->
-        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-        <!--android:id="@+id/tv_expand"-->
-        <!--android:layout_width="367dp"-->
-        <!--android:layout_height="122dp"-->
-        <!--app:tvea_expandLines="3"-->
-        <!--app:tvea_textContentColor="@color/color_gray_light_content_text"-->
-        <!--app:tvea_textContentSize="@dimen/sp_txt_size_content"-->
-        <!--app:tvea_textExpand="@string/expand"-->
-        <!--app:tvea_textShrink="@string/shrink"-->
-        <!--app:tvea_textStateColor="#2ecc71" />-->
+    <!-- bottom three buttons -->
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="78dp"
+        android:weightSum="1"
+        android:gravity="center"
+        android:background="@android:color/white">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:weightSum="1">
+
+            <ImageButton
+                android:layout_width="match_parent"
+                app:srcCompat="@drawable/ic_shopping_cart"
+                android:id="@+id/imageButton4"
+                android:scaleType="fitCenter"
+                android:background="?attr/selectableItemBackground"
+                android:layout_weight="0.23"
+                android:layout_height="40dp" />
+
+            <TextView
+                android:text="Buy"
+                android:textAlignment="center"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textAllCaps="true"
+                android:textColor="@android:color/black"
+                android:textStyle="normal|bold"
+                android:layout_marginTop="8dp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="#dddddd"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:weightSum="1"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
+            <ImageButton
+                app:srcCompat="@drawable/ic_donation"
+                android:id="@+id/imageButton5"
+                android:scaleType="fitCenter"
+                android:background="?attr/selectableItemBackground"
+                android:layout_marginRight="40dp"
+                android:layout_width="80dp"
+                android:layout_weight="0.21"
+                android:layout_height="40dp" />
+            <TextView
+                android:text="Donate"
+                android:textAlignment="center"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textAllCaps="true"
+                android:textColor="@android:color/black"
+                android:textStyle="normal|bold"
+                android:layout_marginTop="8dp" />
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="#dddddd"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:weightSum="1"
+            android:layout_marginLeft="20dp">
+
+            <ImageButton
+                android:layout_width="match_parent"
+                app:srcCompat="@drawable/ic_fair_stand"
+                android:id="@+id/imageButton6"
+                android:scaleType="fitCenter"
+                android:background="?attr/selectableItemBackground"
+                android:layout_height="40dp"
+                android:layout_weight="0.23" />
+
+            <TextView
+                android:text="Sell"
+                android:textAlignment="center"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textAllCaps="true"
+                android:textColor="@android:color/black"
+                android:textStyle="normal|bold"
+                android:layout_marginTop="8dp" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
