--- a/app/src/main/res/layout/activity_launch_home.xml
+++ b/app/src/main/res/layout/activity_launch_home.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1">
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,106 +17,132 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
-    <com.synnapps.carouselview.CarouselView
-        android:id="@+id/carouselView"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        app:fillColor="#FFFFFFFF"
-        app:pageColor="#00000000"
-        app:radius="6dp"
-        app:slideInterval="3000"
-        app:strokeColor="#FF777777"
-        app:strokeWidth="1dp" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="1"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
-            <TextView
-                android:text="Campaign Title"
+            android:layout_height="match_parent">
+
+            <com.synnapps.carouselview.CarouselView
+                android:id="@+id/carouselView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/campaign_title_textview"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textSize="30sp"
-                android:layout_marginTop="16dp" />
+                android:layout_height="180dp"
+                app:fillColor="#FFFFFFFF"
+                app:pageColor="#00000000"
+                app:radius="6dp"
+                app:slideInterval="3000"
+                app:strokeColor="#FF777777"
+                app:strokeWidth="1dp" />
 
-            <TextView
-                android:text="Nonprofit Organization Name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/nonprofit_org_name_textview"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_marginTop="7dp" />
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="1"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                android:paddingBottom="100dp">
+                    <TextView
+                        android:text="Campaign Title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/campaign_title_textview"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                        android:textSize="30sp"
+                        android:layout_marginTop="16dp" />
 
-            <TextView
-                android:text="@string/home_page_description_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/homepage_campaign_descrption"
-                android:layout_marginTop="7dp" />
-            <!--<TextView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:autoLink="web"-->
-                <!--android:"@+id/campaign p"/>-->
+                    <TextView
+                        android:text="Nonprofit Organization Name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/nonprofit_org_name_textview"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                        android:layout_marginTop="7dp" />
 
-            <TextView
-                android:text="TextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView13"
-                android:textAllCaps="true"
-                tools:text="Learn More"
-                android:textColor="@color/colorAccent" />
+                <!--<TextView-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:autoLink="web"-->
+                        <!--android:"@+id/campaign p"/>-->
 
-            <TextView
-                android:text="$2,900 raised of $10,000 goal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/progress_text"
-                android:textSize="14sp"
-                android:layout_marginTop="16dp" />
+                <TextView
+                    android:text="@string/home_page_description_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView16"
+                    android:layout_marginTop="7dp"
+                    android:layout_weight="0.32" />
 
-            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
-                android:layout_width="354dp"
-                app:rcProgress="29.0"
-                app:rcMax="100.0"
-                app:rcRadius="13dp"
-                app:rcBackgroundPadding="1dp"
-                app:rcReverse="false"
-                app:rcProgressColor="#3498db"
-                app:rcBackgroundColor="#eeeeee"
-                android:layout_height="16dp"
-                android:layout_marginTop="2dp" />
+                <TextView
+                        android:text="TextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView13"
+                        android:textAllCaps="true"
+                        tools:text="Learn More"
+                        android:textColor="@color/colorAccent" />
 
-            <TextView
-                android:text="20 days left"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView12"
-                android:textAllCaps="true"
-                android:textStyle="normal|bold" />
+                    <TextView
+                        android:text="$2,900 raised of $10,000 goal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/progress_text"
+                        android:textSize="14sp"
+                        android:layout_marginTop="16dp" />
+
+                    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
+                        android:layout_width="match_parent"
+                        app:rcProgress="29.0"
+                        app:rcMax="100.0"
+                        app:rcRadius="13dp"
+                        app:rcBackgroundPadding="1dp"
+                        app:rcReverse="false"
+                        app:rcProgressColor="#3498db"
+                        app:rcBackgroundColor="#eeeeee"
+                        android:layout_height="16dp"
+                        android:layout_marginTop="2dp" />
+
+                    <TextView
+                        android:text="20 days left"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView12"
+                        android:textAllCaps="true"
+                        android:textStyle="normal|bold" />
+
+                <TextView
+                    android:text="TextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView14"
+                    android:textSize="20sp"
+                    android:textColor="@android:color/black"
+                    tools:text="Featured Item"
+                    android:layout_marginTop="16dp" />
 
 
-        <!--<com.hhsfbla.launch.TextViewExpandableAnimation-->
-            <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-            <!--android:id="@+id/tv_expand"-->
-            <!--android:layout_width="367dp"-->
-            <!--android:layout_height="122dp"-->
-            <!--app:tvea_expandLines="3"-->
-            <!--app:tvea_textContentColor="@color/color_gray_light_content_text"-->
-            <!--app:tvea_textContentSize="@dimen/sp_txt_size_content"-->
-            <!--app:tvea_textExpand="@string/expand"-->
-            <!--app:tvea_textShrink="@string/shrink"-->
-            <!--app:tvea_textStateColor="#2ecc71" />-->
-    </LinearLayout>
+                <!--<com.hhsfbla.launch.TextViewExpandableAnimation-->
+                    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+                    <!--android:id="@+id/tv_expand"-->
+                    <!--android:layout_width="367dp"-->
+                    <!--android:layout_height="122dp"-->
+                    <!--app:tvea_expandLines="3"-->
+                    <!--app:tvea_textContentColor="@color/color_gray_light_content_text"-->
+                    <!--app:tvea_textContentSize="@dimen/sp_txt_size_content"-->
+                    <!--app:tvea_textExpand="@string/expand"-->
+                    <!--app:tvea_textShrink="@string/shrink"-->
+                    <!--app:tvea_textStateColor="#2ecc71" />-->
+            </LinearLayout>
+        </LinearLayout>
 
+    </ScrollView>
+
+</LinearLayout>
 
     <!-- bottom three buttons -->
     <LinearLayout
@@ -116,7 +151,8 @@
         android:layout_height="78dp"
         android:weightSum="1"
         android:gravity="center"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        android:layout_alignParentBottom="true">
 
         <LinearLayout
             android:orientation="vertical"
@@ -214,4 +250,4 @@
                 android:layout_marginTop="8dp" />
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
