--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,10 @@
         <item
             android:id="@+id/nav_donate"
             android:title="Donate" />
+        <item
+            android:id="@+id/nav_account_settings"
+            android:title="Account Settings"/>
+
         <!--<item-->
             <!--android:id="@+id/nav_donate"-->
             <!--android:title="Donate" />-->
