--- a/app/src/main/res/layout/activity_titlescreen.xml
+++ b/app/src/main/res/layout/activity_titlescreen.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="@drawable/background"
     android:padding="16dp"
     tools:context="com.hhsfbla.launch.TitlescreenActivity">
 
@@ -14,28 +14,45 @@
          android:fitsSystemWindows. -->
 
     <TextView
-        android:text="Logo"
-        android:layout_width="match_parent"
-        android:layout_height="138dp"
-        android:id="@+id/textView2"
-        android:textSize="36sp"
-        android:textColor="#fff" />
-
-    <Button
-        android:text="Login"
-        android:layout_width="wrap_content"
+        android:text="This is some random description text that needs to be changed at some point but for now this is here."
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/titlescreen_login_btn" />
+        android:id="@+id/textView8"
+        android:textSize="20sp"
+        android:textColor="#fff"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center" />
 
     <Button
         android:text="Sign Up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/titlescreen_signup_btn"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:fontFamily="sans-serif-medium" />
+        android:fontFamily="sans-serif-medium"
+        android:layout_below="@+id/titlescreen_login_btn"
+        android:layout_alignStart="@+id/titlescreen_login_btn" />
+
+    <Button
+        android:text="Login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/titlescreen_login_btn"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/textView8"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="Welcome to Launch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:textSize="36sp"
+        android:textColor="#fff"
+        android:textAlignment="center"
+        android:layout_marginTop="42dp"
+        android:fontFamily="sans-serif"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
