--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#283d48</color>
     <color name="colorPrimaryDark">#283d48</color>
-    <color name="colorAccent">#1565C0</color>
+    <color name="colorAccent">#0d47a1</color>
 
 
     <color name="color_divider_line_gray">#e2e2e2</color>
