--- a/app/src/main/res/layout/activity_launch_home.xml
+++ b/app/src/main/res/layout/activity_launch_home.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:id="@+id/fundraiser">
 
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -124,8 +125,8 @@
 
 </LinearLayout>
 
-    <!-- bottom three buttons -->
-    <LinearLayout
+        <!-- bottom three buttons -->
+        <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="78dp"
