Reconcile FundraiserRecyclerViewAdapter conflicts

--- a/app/src/main/res/layout/fragment_fundraiser.xml
+++ b/app/src/main/res/layout/fragment_fundraiser.xml
@@ -140,7 +140,8 @@
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:id="@+id/buy_button">
 
             <ImageButton
                 android:layout_width="match_parent"
@@ -175,7 +176,8 @@
             android:layout_height="wrap_content"
             android:weightSum="1"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_marginRight="20dp"
+            android:id="@+id/donate_button">
             <ImageButton
                 app:srcCompat="@drawable/ic_donation"
                 android:id="@+id/imageButton5"
@@ -209,7 +211,8 @@
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:weightSum="1"
-            android:layout_marginLeft="20dp">
+            android:layout_marginLeft="20dp"
+            android:id="@+id/sell_button">
 
             <ImageButton
                 android:layout_width="match_parent"
