--- a/app/src/main/res/layout/fragment_fundraiser.xml
+++ b/app/src/main/res/layout/fragment_fundraiser.xml
@@ -35,7 +35,7 @@
                 android:background="#ddd"
                 android:layout_width="match_parent" />
 
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:app="http://schemas.android.com/apk/res-auto"
                     xmlns:tools="http://schemas.android.com/tools"
                     android:orientation="vertical"
@@ -126,7 +126,7 @@
 </LinearLayout>
 
         <!-- bottom three buttons -->
-        <LinearLayout
+    <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="78dp"
@@ -150,7 +150,8 @@
                 android:scaleType="fitCenter"
                 android:background="?attr/selectableItemBackground"
                 android:layout_weight="0.23"
-                android:layout_height="40dp" />
+                android:layout_height="40dp"
+                android:clickable="false" />
 
             <TextView
                 android:text="Buy"
@@ -186,7 +187,8 @@
                 android:layout_marginRight="40dp"
                 android:layout_width="80dp"
                 android:layout_weight="0.21"
-                android:layout_height="40dp" />
+                android:layout_height="40dp"
+                android:clickable="false" />
             <TextView
                 android:text="Donate"
                 android:textAlignment="center"
@@ -221,7 +223,8 @@
                 android:scaleType="fitCenter"
                 android:background="?attr/selectableItemBackground"
                 android:layout_height="40dp"
-                android:layout_weight="0.23" />
+                android:layout_weight="0.23"
+                android:clickable="false" />
 
             <TextView
                 android:text="Sell"
