--- a/app/src/main/res/layout/content_sign_up.xml
+++ b/app/src/main/res/layout/content_sign_up.xml
@@ -64,7 +64,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="20dp"
         android:id="@+id/signup_button"
-        android:background="@drawable/button_style"
         android:layout_alignParentEnd="true"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        style="@style/Widget.AppCompat.Button.Colored" />
 </RelativeLayout>
