Finished first part of Item Creation, and finished up Item viewing/browsing

--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -87,7 +87,9 @@
                             android:layout_height="wrap_content"
                             android:id="@+id/item_condition"
                             android:clickable="false"
-                            android:layout_marginLeft="15dp"/>
+                            android:layout_marginLeft="15dp"
+                            android:background="@drawable/condition_button"
+                            />
 
                     </LinearLayout>
 
