--- a/app/src/main/res/layout/activity_browse_items.xml
+++ b/app/src/main/res/layout/activity_browse_items.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.hhsfbla.launch.BrowseItemsActivity">
+    tools:context="com.hhsfbla.launch.BrowseItemsActivity"
+    android:weightSum="1">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
