--- a/app/src/main/res/layout/activity_browse_items.xml
+++ b/app/src/main/res/layout/activity_browse_items.xml
@@ -23,12 +23,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/browse_items_view">
+        android:layout_height="match_parent"
+        android:id="@+id/browse_items_view"
+        android:layout_marginTop="56dp">
 
         <ProgressBar
             style="?android:attr/progressBarStyleLarge"
@@ -39,9 +38,9 @@
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/browse_items_recycler"
-            android:layout_gravity="center"
+            android:layout_gravity="top"
             android:background="?android:attr/colorBackground" />
 
     </FrameLayout>
