--- a/app/src/main/res/layout/fragment_buy_item_success_dialog.xml
+++ b/app/src/main/res/layout/fragment_buy_item_success_dialog.xml
@@ -24,6 +24,6 @@
         android:text="Thanks to your purchase, $x was donated to [fundraiser]. A receipt and shipping details have been sent to [email]."
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/donation_success_text"
+        android:id="@+id/buy_success_text"
         android:layout_marginTop="16dp" />
 </LinearLayout>
