Bring back working progress bars and finish all donation stuff

--- a/app/src/main/res/layout/content_donate.xml
+++ b/app/src/main/res/layout/content_donate.xml
@@ -26,7 +26,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
+        android:inputType="number"
         android:ems="10"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/donate_proceed_button"
