Large amount of random design improvements

--- a/app/src/main/res/layout/content_create_item.xml
+++ b/app/src/main/res/layout/content_create_item.xml
@@ -92,10 +92,11 @@
 
     <Spinner
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/item_spinner"
         android:layout_below="@+id/item_text_view4"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:layout_height="40dp"
+        android:background="@android:color/white" />
 
 </RelativeLayout>
