--- a/app/src/main/res/drawable/condition_button.xml
+++ b/app/src/main/res/drawable/condition_button.xml
@@ -5,6 +5,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp"/>
-    <stroke android:width="5px" android:color="#000000" />
+    <!--<stroke android:width="5px" android:color="#000000" />-->
     <solid android:color="#ffffff"/>
 </shape>
