--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -37,14 +37,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                android:weightSum="1">
 
                 <ImageView
                     xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
-                    android:layout_height="110dp"
                     app:srcCompat="@drawable/image_placeholder"
-                    android:id="@+id/item_picture" />
+                    android:id="@+id/item_picture"
+                    android:background="#ddd"
+                    android:layout_height="260dp" />
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -61,7 +63,8 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/item_name"
                         android:textSize="30dp"
-                        android:layout_marginBottom="10dp"/>
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@android:color/black" />
 
                     <TextView
                         android:text="Price"
@@ -69,7 +72,8 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/item_price"
                         android:textSize="20dp"
-                        android:layout_marginBottom="10dp"/>
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@android:color/black" />
 
                     <LinearLayout
                         android:orientation="horizontal"
@@ -87,12 +91,36 @@
                         <Button
                             android:text="Condition"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="27dp"
                             android:id="@+id/item_condition"
                             android:clickable="false"
                             android:layout_marginLeft="15dp"
                             android:background="@drawable/condition_button"
-                            />
+                            android:textColor="@android:color/white" />
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp">
+
+
+                        <TextView
+                            android:text="Sold by:"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20dp"/>
+
+                        <TextView
+                            android:text="Seller Name"
+                            android:layout_marginLeft="15dp"
+                            android:id="@+id/item_seller_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20dp"/>
 
                     </LinearLayout>
 
@@ -102,7 +130,8 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/item_description"
                         android:textSize="15dp"
-                        android:layout_marginBottom="15dp"/>
+                        android:layout_marginBottom="15dp"
+                        android:layout_marginTop="15dp" />
 
                     <Button
                         android:text="Buy"
@@ -118,10 +147,10 @@
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     android:layout_marginTop="20dp"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp">
+                    android:layout_marginRight="15dp"
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:text="About the Seller and Campaign"
@@ -134,15 +163,15 @@
 
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
+                        android:layout_height="wrap_content">
 
                         <LinearLayout
                             android:orientation="vertical"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                            android:layout_height="wrap_content">
 
                             <TextView
-                                android:text="By buying this item, you contribute to: "
+                                android:text="By buying this item, you contribute to the: "
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="15dp"
@@ -165,22 +194,6 @@
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="15dp">
 
-
-                                <ImageView
-                                    android:layout_width="75dp"
-                                    android:layout_height="75dp"
-                                    app:srcCompat="@drawable/image_placeholder"
-                                    android:id="@+id/item_seller_picture"
-                                    android:layout_marginLeft="30dp"/>
-
-                                <TextView
-                                    android:text="Seller Name"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:id="@+id/item_seller_name"
-                                    android:layout_gravity="center_vertical"
-                                    android:textSize="15dp"
-                                    android:layout_marginLeft="20dp"/>
 
                             </LinearLayout>
                         </LinearLayout>
