--- a/app/src/main/res/layout/card_item_layout.xml
+++ b/app/src/main/res/layout/card_item_layout.xml
@@ -9,7 +9,19 @@
     android:id="@+id/item_card"
     android:layout_width="match_parent">
 
-    <LinearLayout
+
+    <com.balysv.materialripple.MaterialRippleLayout
+        android:id="@+id/card_item_ripple"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:mrl_rippleColor="#26000000"
+        app:mrl_rippleAlpha="0.10"
+        app:mrl_rippleOverlay="false"
+        app:mrl_rippleHover="true"
+        app:mrl_rippleDimension="1dp"
+        app:mrl_rippleDuration="350">
+
+        <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="120dp">
@@ -49,5 +61,7 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    </com.balysv.materialripple.MaterialRippleLayout>
 
 </android.support.v7.widget.CardView>
